{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 75,
  "lineage": "da9f0fbe-6e58-3de7-60f5-c26cbcf34012",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f38c9341dc533d2",
            "arn": "arn:aws:ec2:us-east-1:959188556766:elastic-ip/eipalloc-08f38c9341dc533d2",
            "association_id": "eipassoc-0e4fa8c080ee9764d",
            "domain": "vpc",
            "id": "eipalloc-08f38c9341dc533d2",
            "instance": "i-0b7ca2e350c862f70",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06b53a8fba358a80e",
            "private_dns": "ip-172-31-20-187.ec2.internal",
            "private_ip": "172.31.20.187",
            "public_dns": "ec2-98-82-250-58.compute-1.amazonaws.com",
            "public_ip": "98.82.250.58",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.backend",
            "aws_security_group.backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041a29ff0f284ba12",
            "arn": "arn:aws:ec2:us-east-1:959188556766:elastic-ip/eipalloc-041a29ff0f284ba12",
            "association_id": "eipassoc-00d44b9e865fa02ee",
            "domain": "vpc",
            "id": "eipalloc-041a29ff0f284ba12",
            "instance": "i-068b05120defe393b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-090358839b350d2f6",
            "private_dns": "ip-172-31-24-199.ec2.internal",
            "private_ip": "172.31.24.199",
            "public_dns": "ec2-52-44-134-42.compute-1.amazonaws.com",
            "public_ip": "52.44.134.42",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.balancer",
            "aws_security_group.balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05627e42bd686c7d9",
            "arn": "arn:aws:ec2:us-east-1:959188556766:elastic-ip/eipalloc-05627e42bd686c7d9",
            "association_id": "eipassoc-01d84fb5362b8862c",
            "domain": "vpc",
            "id": "eipalloc-05627e42bd686c7d9",
            "instance": "i-0d166bd8b3c3e90a3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06345d2c75fc9abe9",
            "private_dns": "ip-172-31-30-130.ec2.internal",
            "private_ip": "172.31.30.130",
            "public_dns": "ec2-35-174-98-11.compute-1.amazonaws.com",
            "public_ip": "35.174.98.11",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend1",
            "aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0028007964d9789eb",
            "arn": "arn:aws:ec2:us-east-1:959188556766:elastic-ip/eipalloc-0028007964d9789eb",
            "association_id": "eipassoc-04adeafbc50043431",
            "domain": "vpc",
            "id": "eipalloc-0028007964d9789eb",
            "instance": "i-04f80b173a2c90c15",
            "network_border_group": "us-east-1",
            "network_interface": "eni-067f8b98c603edeaf",
            "private_dns": "ip-172-31-18-204.ec2.internal",
            "private_ip": "172.31.18.204",
            "public_dns": "ec2-98-87-228-194.compute-1.amazonaws.com",
            "public_ip": "98.87.228.194",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.frontend2",
            "aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092f705ab61d2fc0b",
            "arn": "arn:aws:ec2:us-east-1:959188556766:elastic-ip/eipalloc-092f705ab61d2fc0b",
            "association_id": "eipassoc-093ae8b9f5a8cb420",
            "domain": "vpc",
            "id": "eipalloc-092f705ab61d2fc0b",
            "instance": "i-0c7ca724a9f9ad242",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f651c3fd33d75d79",
            "private_dns": "ip-172-31-26-179.ec2.internal",
            "private_ip": "172.31.26.179",
            "public_dns": "ec2-100-27-52-132.compute-1.amazonaws.com",
            "public_ip": "100.27.52.132",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.nfs",
            "aws_security_group.nfs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:959188556766:instance/i-0b7ca2e350c862f70",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7ca2e350c862f70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06b53a8fba358a80e"
              }
            ],
            "primary_network_interface_id": "eni-06b53a8fba358a80e",
            "private_dns": "ip-172-31-20-187.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.187",
            "public_dns": "ec2-98-82-250-58.compute-1.amazonaws.com",
            "public_ip": "98.82.250.58",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f855cb384125d5b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "backend-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c7c608103f4c723",
            "tags": {
              "Name": "backend"
            },
            "tags_all": {
              "Name": "backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cff20afec66bd5c6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959188556766",
            "id": "i-0b7ca2e350c862f70",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:959188556766:instance/i-068b05120defe393b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068b05120defe393b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-090358839b350d2f6"
              }
            ],
            "primary_network_interface_id": "eni-090358839b350d2f6",
            "private_dns": "ip-172-31-24-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.199",
            "public_dns": "ec2-52-44-134-42.compute-1.amazonaws.com",
            "public_ip": "52.44.134.42",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c59e0d93e6031547",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "balancer-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c7c608103f4c723",
            "tags": {
              "Name": "balancer"
            },
            "tags_all": {
              "Name": "balancer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e4c8e57d023f8ff"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959188556766",
            "id": "i-068b05120defe393b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:959188556766:instance/i-0d166bd8b3c3e90a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d166bd8b3c3e90a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06345d2c75fc9abe9"
              }
            ],
            "primary_network_interface_id": "eni-06345d2c75fc9abe9",
            "private_dns": "ip-172-31-30-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.30.130",
            "public_dns": "ec2-35-174-98-11.compute-1.amazonaws.com",
            "public_ip": "35.174.98.11",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0faa5ef26fcdb1137",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "frontend-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c7c608103f4c723",
            "tags": {
              "Name": "frontend-1"
            },
            "tags_all": {
              "Name": "frontend-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029d384f274d1a0dd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959188556766",
            "id": "i-0d166bd8b3c3e90a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:959188556766:instance/i-04f80b173a2c90c15",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f80b173a2c90c15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-067f8b98c603edeaf"
              }
            ],
            "primary_network_interface_id": "eni-067f8b98c603edeaf",
            "private_dns": "ip-172-31-18-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.204",
            "public_dns": "ec2-98-87-228-194.compute-1.amazonaws.com",
            "public_ip": "98.87.228.194",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b475cdb85a64c4d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "frontend-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c7c608103f4c723",
            "tags": {
              "Name": "frontend-2"
            },
            "tags_all": {
              "Name": "frontend-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029d384f274d1a0dd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959188556766",
            "id": "i-04f80b173a2c90c15",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:959188556766:instance/i-0c7ca724a9f9ad242",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7ca724a9f9ad242",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f651c3fd33d75d79"
              }
            ],
            "primary_network_interface_id": "eni-0f651c3fd33d75d79",
            "private_dns": "ip-172-31-26-179.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.179",
            "public_dns": "ec2-100-27-52-132.compute-1.amazonaws.com",
            "public_ip": "100.27.52.132",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c52f9f5031abea4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nfs-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c7c608103f4c723",
            "tags": {
              "Name": "nfs"
            },
            "tags_all": {
              "Name": "nfs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00191346c524ec2c3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959188556766",
            "id": "i-0c7ca724a9f9ad242",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.nfs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959188556766:security-group/sg-0cff20afec66bd5c6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cff20afec66bd5c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "959188556766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a54014617fe7e725"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959188556766",
            "id": "sg-0cff20afec66bd5c6",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959188556766:security-group/sg-00e4c8e57d023f8ff",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00e4c8e57d023f8ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "balancer-sg",
            "name_prefix": "",
            "owner_id": "959188556766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a54014617fe7e725"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959188556766",
            "id": "sg-00e4c8e57d023f8ff",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959188556766:security-group/sg-029d384f274d1a0dd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-029d384f274d1a0dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-sg",
            "name_prefix": "",
            "owner_id": "959188556766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a54014617fe7e725"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959188556766",
            "id": "sg-029d384f274d1a0dd",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959188556766:security-group/sg-00191346c524ec2c3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00191346c524ec2c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nfs-sg",
            "name_prefix": "",
            "owner_id": "959188556766",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a54014617fe7e725"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "959188556766",
            "id": "sg-00191346c524ec2c3",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}